--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@
     box-sizing: border-box;
 }
 
+:root {
+    --body-bg: hsl(0, 0%, 12%);
+}
+
 html {
     color-scheme: dark ;
 }
 
 body {
+    background: var(--body-bg);
+    color: white;
     font-family: system-ui;
     font-size: 1.25rem;
     line-height: 1.5;
@@ -52,7 +58,40 @@ section {
     transform: skewY(var(--skew-angle));
 }
 
+.spikes {
+    --spike-color: var(--body-bg);
+    --spike-width: 30px;
+    --spike-height: 50px;
 
+    position: relative;
+    color: black;
+    background: linear-gradient(to right, #fdc830, #f37335);
+}
+
+.spikes::before,
+.spikes::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background: var(--spike-color);
+
+    /* this is for chrome */
+    -webkit-mask-image: url('assets/triangle.svg');
+    -webkit-mask-size: var(--spike-width) var(--spike-height);
+
+    -mask-image: url('assets/triangle.svg');
+    -mask-size: var(--spike-width) var(--spike-height);
+}
+
+.spikes::before {
+    top: 0;
+}
+
+.spikes::after{
+    bottom: 0;
+    transform: rotate(.5turn);
+}
 
 
 
