--- a/style.css
+++ b/style.css
@@ -93,6 +93,33 @@ section {
     transform: rotate(.5turn);
 }
 
+.wavy {
+    /*Mask created with "https://css-generators.com/wavy-shapes/"*/
+    background: linear-gradient(to right, #00f260, #0575e6);
+        
+    
+    
+    --mask:
+          radial-gradient(55.9px at 50% 75px,#000 99%,#0000 101%) calc(50% - 50px) 0/100px 51% repeat-x,
+          radial-gradient(55.9px at 50% -50px,#0000 99%,#000 101%) 50% 25px/100px calc(51% - 25px) repeat-x,
+          radial-gradient(55.9px at 50% calc(100% - 75px),#000 99%,#0000 101%) calc(50% - 50px) 100%/100px 51% repeat-x,
+          radial-gradient(55.9px at 50% calc(100% + 50px),#0000 99%,#000 101%) 50% calc(100% - 25px)/100px calc(51% - 25px) repeat-x;
+        -webkit-mask: var(--mask);
+                mask: var(--mask);
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
